seamless/tests/api_body_compile_tests/05_deserialize_struct_only.stderr
error[E0277]: the trait bound `Foo: Serialize` is not satisfied
  --> $DIR/05_deserialize_struct_only.rs:10:31
   |
10 |     let f = Foo { hello: 10 }.to_json_value();
   |                               ^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `Foo`
