seamless/tests/api_body_compile_tests/05_deserialize_struct_only.rs
use seamless::ApiBody;

#[ApiBody(Deserialize)]
struct Foo {
    hello: usize
}

fn main() {
    // This should fail to compile because serialize not implemented
    let f = Foo { hello: 10 }.to_json_value();
}